# simple_gemm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gemm.hpp
src/: gemm.cpp  main.cpp
test/: CMakeLists.txt  gemm_test.cpp
